--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "browserify index.js -o bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/naogify/smart-map#readme",
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "browserify": "^17.0.0",
     "csv-parse": "^5.3.6",
     "node-fetch": "^2.6.9",
     "openai": "^3.2.1"
