add next js template

--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "smart-map",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "openai-quickstart-node",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "browserify index.js -o bundle.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/naogify/smart-map.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/naogify/smart-map/issues"
-  },
-  "homepage": "https://github.com/naogify/smart-map#readme",
   "dependencies": {
+    "next": "^13.1.1",
+    "openai": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@geolonia/normalize-japanese-addresses": "^2.7.4",
     "@turf/turf": "^6.5.0",
-    "browserify": "^17.0.0",
-    "csv-parse": "^5.3.6",
-    "node-fetch": "^2.6.9",
-    "openai": "^3.2.1"
+    "node-fetch": "^2.6.9"
+  },
+  "engines": {
+    "node": ">=14.6.0"
   }
 }
