--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@geolonia/normalize-japanese-addresses": "^2.7.4",
+    "@turf/turf": "^6.5.0",
     "next": "^13.1.1",
+    "node-fetch": "^2.6.9",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@geolonia/normalize-japanese-addresses": "^2.7.4",
-    "@turf/turf": "^6.5.0",
-    "node-fetch": "^2.6.9"
+    "react-loading": "^2.0.3"
   },
   "engines": {
     "node": ">=14.6.0"
